# horus-plotter

./: .gitignore  README.md  app.py  batch_1_plan.txt  bug_hunt.py  checkpoint.json  index.html  main.js  package.json  plot.py  plot_history.db  preload.js  pyproject.toml  renderer.js  report_text.gcode  style.css  test_app.py  test_app2.py  ui_components.py
core/: __init__.py  converters.py  exceptions.py  extras.py  features.py  font_data.py  font_pool.py  fonts.py  gcode.py  improvements.py  notebook.py  paths.py  pipeline.py  preprocessing.py  text_engine.py  text_pipeline.py  ultra_core.py  vision.py
gcode/: converter.js  sender.js
output/: test.gcode
tests/: conftest.py  test_converters.py  test_exceptions.py  test_font_pool.py  test_fonts.py  test_gcode.py  test_new_converters.py  test_new_features.py  test_paths.py  test_ultra_core.py
